Fixing overlapping transitions and adding blurr

--- a/css/landscape.css
+++ b/css/landscape.css
@@ -419,7 +419,7 @@ summary {
 }
 
 summary::-webkit-details-marker {
-    display: none
+    display: none;
 }
 
 summary:hover {
@@ -427,7 +427,7 @@ summary:hover {
 }
 
 .arrow{
-    display: none
+    display: none;
 }
 
 .arrow a {
@@ -448,7 +448,7 @@ summary:hover {
 
 .arrow a span {
   position: absolute;
-  top: 3vh;
+  top: 1vh;
   left: 50%;
   width: 3.5vh;
   height: 3.5vh;
@@ -488,3 +488,12 @@ summary:hover {
   }
 }
 
+#blurrystuff {
+   display: none;
+   position: relative;
+   width: 100%;
+   height: 7vh;
+   top:-7vh;
+   background: linear-gradient(rgb(255,247,251,0), rgb(255,247,251,1) 80%);
+   pointer-events: none;
+}
