--- a/css/portrait.css
+++ b/css/portrait.css
@@ -349,7 +349,7 @@ summary {
 }
 
 summary::-webkit-details-marker {
-    display: none
+    display: none;
 }
 
 summary:hover {
@@ -357,7 +357,7 @@ summary:hover {
 }
 
 .arrow{
-    display: none
+    display: none;
 }
 
 .arrow a {
@@ -378,7 +378,7 @@ summary:hover {
 
 .arrow a span {
   position: absolute;
-  top: 3vw;
+  top: 1vw;
   left: 50%;
   width: 3.5vw;
   height: 3.5vw;
@@ -418,3 +418,12 @@ summary:hover {
   }
 }
 
+#blurrystuff {
+   display: none;
+   position: relative;
+   width: 100%;
+   height: 7vw;
+   top:-7vw;
+   background: linear-gradient(rgb(255,247,251,0), rgb(255,247,251,1) 80%);
+   pointer-events: none;
+}
